--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .App-logo {
@@ -11,6 +14,37 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+
+.api-container{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  background-color: rgb(240, 200, 240);
+  margin: 20px;
+  gap: 20px;
+  padding: 20px;
+}
+
+.img-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid;
+  padding: 5px;
+}
+.login-form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+  background-color: rgb(219, 242, 184);
+  padding: 20px;
+  margin: 20px;
+  border: 1px solid;
+}
+
+.login-form input {
+  width: 280px;
 }
 
 .App-header {
