--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,24 @@
   }
 }
 
+.navbar{
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  background-color: gray;
+  padding: 5px;
+}
+
+.navbar a{
+  text-decoration: none;
+  color: rgb(254, 173, 187);
+}
+
+
 .api-container{
   display: grid;
   grid-template-columns: repeat(3,1fr);
-  background-color: rgb(240, 200, 240);
+  background-color: rgba(248, 214, 234, 0.233);
   margin: 20px;
   gap: 20px;
   padding: 20px;
@@ -29,18 +43,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 2px solid;
-  padding: 5px;
+  border: 1px solid;
+  border-radius: 20px;
+  padding: 20px;
 }
 .login-form{
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 5px;
-  background-color: rgb(219, 242, 184);
+  background-color: rgba(248, 214, 234, 0.233);
   padding: 20px;
   margin: 20px;
   border: 1px solid;
+  border-radius: 20px;
 }
 
 .login-form input {
